# BostadsBot

./: Makefile  README.md  pyproject.toml
BostadsBotScraper/: __init__.py  dataset.py  features.py  plots.py
BostadsBotScraper/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
