[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "BostadsBotScraper"
version = "0.0.1"
description = "Programatically collect house sales data in Sweden, train model, provide predictions for sale price given inputs"
authors = [
  { name = "Jonathan Jayes" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["BostadsBotScraper"]
force_sort_within_sections = true
